fix: image name overflow. closes #1670

--- a/src/components/ImageUpload/imageUpload.css
+++ b/src/components/ImageUpload/imageUpload.css
@@ -26,7 +26,8 @@
   display: flex;
   align-items: center;
   height: 100%;
-  width: 85%;
+  width: 80%;
+  flex: 1;
 }
 
 .image-footer .image-thumbnail {
@@ -41,7 +42,6 @@
   max-width: 100%;
   max-height: 100%;
   display: inline-block;
-  margin-left: 10px;
 }
 
 .image-footer .image-actions {
